--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
   background-color: #ffffff;
   font-size: 16px;
   letter-spacing: 0.02em;
-  min-width: 320px;
+  min-width: 480px;
   overflow: hidden;
 }
 
@@ -35,7 +35,7 @@ html {
 
 .container {
   width: 480px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 0 16px;
   outline: var(--outline-1);
 }
