--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ nav a:focus,
   display: flex;
   align-items: center;
   gap: 72px;
-  position: absolute;
+  /* position: absolute; */
   background-color: var(--navy-blue);
   background-image: linear-gradient(
       to bottom,
@@ -256,7 +256,7 @@ nav a:focus,
   background-size: cover;
   width: 480px;
   height: 432px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 188px 0;
   text-align: center;
 }
