--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,12 @@ body {
 }
 
 html {
-  overflow: hidden;
+  overflow: auto;
   box-sizing: border-box;
 }
 
 .container {
-  width: 480px;
+  width: 320px;
   margin: 0 auto;
   padding: 0 16px;
 }
@@ -245,9 +245,8 @@ nav a:focus,
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  min-width: 480px;
-
   margin: 0 auto;
+  width: 432px;
   padding: 188px 0;
   text-align: center;
 }
@@ -1007,7 +1006,7 @@ input[type="checkbox"] {
         hsla(237, 18%, 22%, 0.7),
         hsla(237, 18%, 22%, 0.7)
       ),
-      url(../images/tabletbg1.jpg);
+      url(/images/tabletbg1.jpg);
   }
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -1106,7 +1105,7 @@ input[type="checkbox"] {
         hsla(237, 18%, 22%, 0.7),
         hsla(237, 18%, 22%, 0.7)
       ),
-      url(../images/officebg1.jpg);
+      url(/images/officebg1.jpg);
     min-width: 1440px;
     height: 600px;
     margin: 0;
