--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
   font-size: 16px;
   letter-spacing: 0.02em;
   min-width: 480px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 html {
