Changes to footer in tablet version and complet tablet and mobile version fr portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,10 @@ html {
 }
 
 .container {
-  width: 320px;
+  width: 480px;
   margin: 0 auto;
   padding: 0 16px;
+  /* outline: var(--outline-1); */
 }
 
 .section {
@@ -233,7 +234,6 @@ nav a:focus,
   display: flex;
   align-items: center;
   gap: 72px;
-
   background-color: var(--navy-blue);
   background-image: linear-gradient(
       to bottom,
@@ -246,7 +246,7 @@ nav a:focus,
   background-position: center;
   background-size: cover;
   margin: 0 auto;
-  width: 432px;
+  width: 480px;
   padding: 188px 0;
   text-align: center;
 }
@@ -552,7 +552,6 @@ footer .social-media-icon-svg {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 24px;
 }
 .sub-box input {
   width: 100%;
@@ -608,17 +607,19 @@ footer .social-media-icon-svg {
 
 .photo-section ul:nth-child(3) {
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
+  flex-direction: column;
+
+  align-items: center;
 }
 
 .filter-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 24px;
+  gap: 8px;
   margin-bottom: 72px;
 }
+
 .photo-section h3 {
   color: var(--navy-blue);
   font-size: 20px;
@@ -637,6 +638,8 @@ footer .social-media-icon-svg {
   color: var(--slate);
 }
 .photo-section {
+  display: flex;
+  flex-direction: column;
   padding-top: 96px;
   padding-bottom: 120px;
 }
@@ -1069,6 +1072,14 @@ input[type="checkbox"] {
   .sub-box input {
     width: 264px;
     margin-inline-end: 24px;
+  }
+  .filter-list {
+    gap: 24px;
+  }
+  .photo-section ul:nth-child(3) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 16px;
   }
 }
 
